--- a/src/styles/TaskInput.css
+++ b/src/styles/TaskInput.css
@@ -20,6 +20,7 @@
 }
 
 .addTaskBtn {
+  cursor: pointer;
   margin-left: 90px;
   width: 200px;
 }
@@ -33,5 +34,4 @@
   color:black;
   font-size: large;
   padding: 10px;
-  /* width: 300px; */
 }
