--- a/src/styles/TaskList.css
+++ b/src/styles/TaskList.css
@@ -2,14 +2,37 @@
   border: 2px solid rgb(121, 129, 176);
   box-shadow: 6px 8px 10px rgba(0, 0, 0, 0.2); /* Subtle 3D shadow effect */
   margin-bottom: 3%;
-  width: 500px;
+  width: 400px;
+  cursor: pointer;
 }
 
 .printedList:hover {
-  transform: scale(1.02); /* Slight scale up on hover */
-  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.4); /* Slightly larger shadow on hover */
+  transform: scale(1.02);
+  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.4);
 }
 
 .task-list-container {
-  width: 800px;
+  width: 600px;
+  /* border: 1px solid red; */
+}
+
+ .selectStatus {
+  appearance: none;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  font-family: Monaco, monospace;
+}
+
+.selectStatus:hover {
+  border-color: #888;
+}
+
+.selectStatus:focus {
+  border-color: #007bff;
+  box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
 }
